--- a/index.html
+++ b/index.html
@@ -7,6 +7,45 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#about"></a> ABOUT</li>
+          <li><a href="#projects"></a> PROJECTS</li>
+          <li><a href="contact.html"></a>CONTACT</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="about">
+        <div class="text"></div>
+        <figure>
+          <figcaption></figcaption>
+        </figure>
+      </section>
+      <section id="projects">
+        <article class="project">
+          <div class="image"></div>
+          <details>
+            <summary></summary>
+          </details>
+        </article>
+        <article class="project">
+          <div class="image"></div>
+          <details>
+            <summary></summary>
+          </details>
+        </article>
+        <article class="project">
+          <div class="image"></div>
+          <details>
+            <summary></summary>
+          </details>
+        </article>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
   <script src="script.js"></script>
 </html>
