--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#about"></a> ABOUT</li>
-          <li><a href="#projects"></a> PROJECTS</li>
-          <li><a href="contact.html"></a>CONTACT</li>
+          <li><a href="#about">ABOUT</a></li>
+          <span>|</span>
+          <li><a href="#projects">PROJECTS</a></li>
+          <span>|</span>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
